# Hotel-customer-segmentation-end-to-end-deployment

./: Untitled.ipynb  app.py  pyproject.toml  run_pipeline.py  template.py
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
artifacts/: kmeans_model.pkl  preprocessor.pkl
data/: Untitled.ipynb
data/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
src/: exception.py  utils.py
src/components/: data_transformation.py  model_trainer.py
src/components/artifacts/: kmeans_model.pkl  preprocessor.pkl  scaler.pkl
src/hotel_customer_segmentation.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/pipelines/: predict_pipeline.py
templates/: ui.html
